--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "bin": {
     "spotimute": "./index.js"
   },
+  "keywords": ["spotify", "mute", "ad", "advertisement", "commercial", "volume"],
   "repository": {
     "type": "git",
     "url": "https://github.com/hesto2/spotimute.git"
